--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 	
 	<div class="container">
+		<div id="dialog">
+			<img id="img-dialog">
+			<div id="text-content">contenido</div>
+		</div>
 		<div id="container-cell" class="container-cell"></div>
 		<div id="container-piece" class="container-piece"></div>
 	</div>
